--- a/index.html
+++ b/index.html
@@ -9,6 +9,51 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1 class="heading-style">Portfolio Site</h1>
+    <!-- navbar  -->
+    <nav class="sticky-top bg-dark navbar-dark bg-dark">
+        <!-- for small device only  -->
+        <div class="container-fluid d-md-none">
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="offcanvas offcanvas-start text-bg-dark side-width-style" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Portfolio</h5>
+              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <!-- nav content  -->
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Resume</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- for medium to large screen  -->
+        <div class="d-none d-md-block d-lg-block fullwidth">
+            <div class="d-flex flex-row p-3 justify-content-around align-items-center">
+                <!-- icon -->
+                <div class="col-2">
+                    <h1 class="text-danger d-inline">Portfolio</h1>
+                </div>
+                <div class="text-bg-dark col-6">
+                    <a class="navbar-brand" href="#">Home</a>
+                    <a class="navbar-brand" href="#">About</a>
+                    <a class="navbar-brand" href="#">Contact Us</a>
+                </div>
+            </div>
+        </div>
+      </nav>
+
+    <!-- adding bootstrap js cdn  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html> 
