--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <!-- navbar  -->
     <nav class="sticky-top bg-dark navbar-dark bg-dark">
         <!-- for small device only  -->
-        <div class="container-fluid d-md-none">
+        <div class="container-fluid d-md-none p-4 d-flex justify-content-between">
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+          <button>Anupama</button>
           <div class="offcanvas offcanvas-start text-bg-dark side-width-style" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
             <div class="offcanvas-header">
               <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Portfolio</h5>
@@ -39,19 +40,39 @@
         </div>
         <!-- for medium to large screen  -->
         <div class="d-none d-md-block d-lg-block fullwidth">
-            <div class="d-flex flex-row p-3 justify-content-around align-items-center">
+            <div class="d-flex flex-row py-4 justify-content-around align-items-center">
                 <!-- icon -->
                 <div class="col-2">
-                    <h1 class="text-danger d-inline">Portfolio</h1>
+                    <h2 class="text-danger d-inline">Portfolio</h2>
                 </div>
-                <div class="text-bg-dark col-6">
-                    <a class="navbar-brand" href="#">Home</a>
-                    <a class="navbar-brand" href="#">About</a>
-                    <a class="navbar-brand" href="#">Contact Us</a>
+                <div class="text-bg-dark col-7">
+                    <a class="fs-4 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">Home</a>
+                    <a class="fs-4 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">About</a>
+                    <a class="fs-4 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">Contact</a>
+                    <a class="fs-4 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">Resume</a>
                 </div>
             </div>
         </div>
-      </nav>
+    </nav>
+
+    <!-- banner section  -->
+    <section class="widthfull banner-style d-md-flex justify-content-around align-items-center p-4">
+        <div>
+            <img class="banner-img-style" src="./images/anupamh-removebg-preview.png" alt="">
+        </div>
+        <div>
+            <h1>Hello, I'm Anupama</h1>
+            <h3>Web developer || React Developer || Problem Solver</h3>
+            <p>I am an enthusiast regarding frontend developement. I love solving problems in C++. Have been exploring Python currently.</p>
+            <!-- social link  -->
+            <div>
+                <a href="">Github</a>
+                <a href="">LinkedIn</a>
+                <a href="">Leetcode</a>
+                <a href="">Resume</a>
+            </div>
+        </div>
+    </section>
 
     <!-- adding bootstrap js cdn  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
