Added contact us section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,35 @@
         </div>
     </section>
 
+    <!-- portfolio section  -->
+    <section class="widthfull project-section-style">
+        <h1>portolio</h1>
+    </section>
+
+    <!-- contact details section  -->
+    <section class="my-4">
+        <h1 class="text-center fw-bold heading-style py-4">Connect With Me</h1>
+        <form action="" class="py-4 form-style">
+            <div>
+            <div class="mb-3 d-md-flex align-items-center justify-content-center">
+                <label for="exampleFormControlInput1" class="fw-bold col-md-2 label-style">Enter Name:</label>
+                <input type="name" class="input-style" id="exampleFormControlInput1" placeholder="abc xyz">
+            </div>
+            <div class="mb-3 d-md-flex align-items-center justify-content-center">
+                <label for="exampleFormControlInput1" class="fw-bold col-md-2 label-style">Enter Email:</label>
+                <input type="email" class="input-style" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+            <div class="mb-3 d-md-flex align-items-center justify-content-center">
+                <label for="exampleFormControlTextarea1" class="col-md-2 fw-bold label-style">Enter Message:</label>
+                <textarea class="input-style" id="exampleFormControlTextarea1" rows="3" placeholder="Enter your message here..."></textarea>
+            </div>
+            <div class="d-flex justify-content-center send-btn-style">
+                <button class="contact-btn-style" type="submit">SEND</button>
+            </div>
+        </div>
+        </form>
+    </section>
+
     <!-- adding bootstrap js cdn  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
