--- a/index.html
+++ b/index.html
@@ -42,28 +42,28 @@
         <div class="d-none d-md-block d-lg-block fullwidth">
             <div class="d-flex flex-row py-4 justify-content-around align-items-center">
                 <!-- icon -->
-                <div class="col-2">
+                <div class="col-3">
                     <h2 class="text-danger d-inline">Portfolio</h2>
                 </div>
-                <div class="text-bg-dark col-7">
-                    <a class="fs-4 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">Home</a>
-                    <a class="fs-4 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">About</a>
-                    <a class="fs-4 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">Contact</a>
-                    <a class="fs-4 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">Resume</a>
+                <div class="text-bg-dark col-4">
+                    <a class="fs-5 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">Home</a>
+                    <a class="fs-5 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">About</a>
+                    <a class="fs-5 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">Contact</a>
+                    <a class="fs-5 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">Resume</a>
                 </div>
             </div>
         </div>
     </nav>
 
     <!-- banner section  -->
-    <section class="widthfull banner-style d-md-flex justify-content-around align-items-center p-4">
-        <div>
+    <section class="widthfull banner-style px-5">
+        <div class="">
             <img class="banner-img-style" src="./images/anupamh-removebg-preview.png" alt="">
         </div>
-        <div>
-            <h1>Hello, I'm Anupama</h1>
-            <h3>Web developer || React Developer || Problem Solver</h3>
-            <p>I am an enthusiast regarding frontend developement. I love solving problems in C++. Have been exploring Python currently.</p>
+        <div class="banner-content-style">
+            <h1 class="banner-heading-style">Hello, I'm Anupama ...</h1>
+            <h3 class="banner-sub-heading-style">Web developer | React Developer | Problem Solver</h3>
+            <p class="banner-para-style">I am an enthusiast regarding frontend developement. I love solving problems in C++. Have been exploring Python currently.</p>
             <!-- social link  -->
             <div>
                 <a href="">Github</a>
@@ -80,7 +80,7 @@
     </section>
 
     <!-- contact details section  -->
-    <section class="my-4">
+    <section class="my-5">
         <h1 class="text-center fw-bold heading-style py-4">Connect With Me</h1>
         <form action="" class="py-4 form-style">
             <div>
@@ -103,6 +103,17 @@
         </form>
     </section>
 
+    <!-- footer section -->
+    <footer class="bg-dark">
+        <div class="footer-content-style">
+            <p>Copyright &copy; 2024 | Anupama Halder</p>
+        <p>-- Connect Me Social Sites --</p>
+        <!-- social links  -->
+        <a href="">Github</a>
+        <a href="">LinkedIn</a>
+        <a href="">Leetcode</a>
+        </div>
+    </footer>
     <!-- adding bootstrap js cdn  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
