Added about section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <img class="banner-img-style" src="./images/anupamh-removebg-preview.png" alt="">
         </div>
         <div class="banner-content-style">
-            <h1 class="banner-heading-style">Hello, I'm Anupama ...</h1>
+            <h1 class="banner-heading-style typing-demo">Hello, I'm Anupama ...</h1>
             <h3 class="banner-sub-heading-style">Web developer | React Developer | Problem Solver</h3>
             <p class="banner-para-style">I am an enthusiast regarding frontend developement. I love solving problems in C++. Have been exploring Python currently.</p>
             <!-- social link  -->
@@ -79,6 +79,18 @@
         <h1>portolio</h1>
     </section>
 
+    <!-- about section  -->
+    <section class="about-section-style">
+        <h1 class="text-center fw-bold heading-style py-4">About Me</h1>
+        <div class="d-md-flex justify-content-around">
+            <div>
+                <h1>Skills</h1>
+            </div>
+            <div>
+                <h1>Education</h1>
+            </div>
+        </div>
+    </section>
     <!-- contact details section  -->
     <section class="my-5">
         <h1 class="text-center fw-bold heading-style py-4">Connect With Me</h1>
