added portfolio section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <button>Anupama</button>
           <div class="offcanvas offcanvas-start text-bg-dark side-width-style" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Portfolio</h5>
+              <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">AH</h5>
               <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -32,7 +32,7 @@
                   <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Resume</a>
+                  <a class="" href="https://drive.google.com/file/d/18BpUNf1cnuuS7oi5koRQ1rYTvYQbW2Dx/view?usp=sharing" target="_blank">Resume</a>
                 </li>
               </ul>
             </div>
@@ -43,13 +43,13 @@
             <div class="d-flex flex-row py-4 justify-content-around align-items-center">
                 <!-- icon -->
                 <div class="col-3">
-                    <h2 class="text-danger d-inline">Portfolio</h2>
+                    <h2 class="text-white fw-bold d-inline">AH</h2>
                 </div>
                 <div class="text-bg-dark col-4">
                     <a class="fs-5 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">Home</a>
                     <a class="fs-5 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">About</a>
                     <a class="fs-5 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">Contact</a>
-                    <a class="fs-5 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">Resume</a>
+                    <a class="fs-5 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="https://drive.google.com/file/d/18BpUNf1cnuuS7oi5koRQ1rYTvYQbW2Dx/view?usp=sharing" target="_blank">Resume</a>
                 </div>
             </div>
         </div>
@@ -75,8 +75,74 @@
     </section>
 
     <!-- portfolio section  -->
-    <section class="widthfull project-section-style">
-        <h1>portolio</h1>
+    <section class="widthfull project-section-style py-5 px-3">
+        <h1 class="text-dark my-5 text-center">Portfolio</h1>
+        <!-- project 1  -->
+        <div class="card card-container-style mb-3">
+            <div class="row g-0">
+              <div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
+                <a href="https://nature-nurture.netlify.app/">
+                    <img src="/images/nature-nurture.png" class="img-fluid rounded-start" alt="...">
+                </a>
+              </div>
+              <div class="col-12 col-lg-8 ">
+                <div class="p-3">
+                  <h1 class="card-title project-title">Nature Nurture</h1>
+                  <p class="card-text">This is a full stack project on nature-nurture garden for booking any garden services. Here user can confirm/cancel their booking.</p>
+                  <!-- features -->
+                  <div class="py-3">
+                    <p>1. Users can login/register in our site</p>
+                    <p>2. Users can see details of a service</p>
+                    <p>3. Users can book a service</p>
+                    <p>4. While booking a service, users can give his/her preferred date to take service</p>
+                    <p>5. Users can see the list of bookings data in a tabular form in bookings route</p>
+                  </div>
+                  <!-- skills  -->
+                  <div>
+                    <h3>Skills:</h3>
+                    <button class="skill-btn-style">Node</button>
+                    <button class="skill-btn-style">HTML</button>
+                    <button class="skill-btn-style">CSS</button>
+                    <button class="skill-btn-style">MongoDB</button>
+                    <button class="skill-btn-style">React</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- project 2  -->
+        <div class="card card-container-style mb-3">
+            <div class="row g-0">
+              <div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
+                <a href="https://talent-canvas.netlify.app/">
+                    <img src="/images/job-seraching.png" class="img-fluid rounded-start" alt="...">
+                </a>
+              </div>
+              <div class="col-12 col-lg-8 ">
+                <div class="p-3">
+                  <h1 class="card-title project-title">Talent Canvas</h1>
+                  <p class="card-text">This is a full stack project on job searching. Where features are--</p>
+                  <!-- features -->
+                  <div class="py-3">
+                    <p>1. Users can hashtag#apply for jobs just by putting a resume link after login to the website.</p>
+                    <p>2. Users can also post their own jobs.</p>
+                    <p>3. users can sort the jobs based on filters like job category or job posting dates.</p>
+                    <p>4. Users can see how many people have hashtag#applied to one job.</p>
+                    <p>5. Users can edit/delete their own job posts</p>
+                  </div>
+                  <!-- skills  -->
+                  <div>
+                    <h3>Skills:</h3>
+                    <button class="skill-btn-style">Node</button>
+                    <button class="skill-btn-style">HTML</button>
+                    <button class="skill-btn-style">CSS</button>
+                    <button class="skill-btn-style">MongoDB</button>
+                    <button class="skill-btn-style">React</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
     </section>
 
     <!-- about section  -->
