Added about me section

--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
             <p class="banner-para-style">I am an enthusiast regarding frontend developement. I love solving problems in C++. Have been exploring Python currently.</p>
             <!-- social link  -->
             <div>
-                <a href="">Github</a>
-                <a href="">LinkedIn</a>
-                <a href="">Leetcode</a>
-                <a href="">Resume</a>
+                <a href="https://github.com/anupamahalder">Github</a>
+                <a href="https://www.linkedin.com/in/anupama-halder7/">LinkedIn</a>
+                <a href="https://leetcode.com/u/anupamahalder7/">Leetcode</a>
             </div>
         </div>
     </section>
@@ -146,14 +145,36 @@
     </section>
 
     <!-- about section  -->
-    <section class="about-section-style">
-        <h1 class="text-center fw-bold heading-style py-4">About Me</h1>
-        <div class="d-md-flex justify-content-around">
-            <div>
-                <h1>Skills</h1>
-            </div>
-            <div>
-                <h1>Education</h1>
+    <section class="about-section-style bg-dark py-5">
+        <h1 class="text-center fw-bold heading-style py-4 text-white">About Me</h1>
+        <div class="container-fluid text-white">
+            <div class="container">
+                <div class="row">
+                    <div class="my-4 col-12 col-md-6">
+                        <h3 class="">Skills</h3>
+                        <h5>Web Development:</h5>
+                        <div class="mb-5">
+                            <button class="skill-btn-style">Node</button>
+                            <button class="skill-btn-style">HTML</button>
+                            <button class="skill-btn-style">CSS</button>
+                            <button class="skill-btn-style">MongoDB</button>
+                            <button class="skill-btn-style">React</button>
+                            <button class="skill-btn-style">JavaScript</button>
+                            <button class="skill-btn-style">HTML</button>
+                        </div>
+                        <h3>Programming Language:</h3>
+                        <div>
+                            <button class="skill-btn-style">C/C++</button>
+                            <button class="skill-btn-style">JavaScript</button>
+                            <button class="skill-btn-style">Python</button>
+                        </div>
+                    </div>
+                    <div class="my-4 col-12 col-md-6 mb-3">
+                        <h3>Education:</h3>
+                        <p>MCA, Jadavpur University, India</p>
+                        <p>BSC (Computer Science), Vivekanda College, India</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -187,9 +208,9 @@
             <p>Copyright &copy; 2024 | Anupama Halder</p>
         <p>-- Connect Me Social Sites --</p>
         <!-- social links  -->
-        <a href="">Github</a>
-        <a href="">LinkedIn</a>
-        <a href="">Leetcode</a>
+        <a href="https://github.com/anupamahalder">Github</a>
+        <a href="https://www.linkedin.com/in/anupama-halder7/">LinkedIn</a>
+        <a href="https://leetcode.com/u/anupamahalder7/">Leetcode</a>
         </div>
     </footer>
     <!-- adding bootstrap js cdn  -->
