Changed color and add responsiveness

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <button>Anupama</button>
+          <span class="text-white fw-bold">AH</span>
           <div class="offcanvas offcanvas-start text-bg-dark side-width-style" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
             <div class="offcanvas-header">
               <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">AH</h5>
@@ -32,7 +32,7 @@
                   <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="" href="https://drive.google.com/file/d/18BpUNf1cnuuS7oi5koRQ1rYTvYQbW2Dx/view?usp=sharing" target="_blank">Resume</a>
+                  <a class="anchor-style" href="https://drive.google.com/file/d/18BpUNf1cnuuS7oi5koRQ1rYTvYQbW2Dx/view?usp=sharing" target="_blank">Resume</a>
                 </li>
               </ul>
             </div>
@@ -45,11 +45,11 @@
                 <div class="col-3">
                     <h2 class="text-white fw-bold d-inline">AH</h2>
                 </div>
-                <div class="text-bg-dark col-4">
+                <div class="text-bg-dark col-4 col-md-7 col-lg-4">
                     <a class="fs-5 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">Home</a>
                     <a class="fs-5 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">About</a>
                     <a class="fs-5 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="#">Contact</a>
-                    <a class="fs-5 mx-3 p-1 text-white link-underline link-underline-opacity-0" href="https://drive.google.com/file/d/18BpUNf1cnuuS7oi5koRQ1rYTvYQbW2Dx/view?usp=sharing" target="_blank">Resume</a>
+                    <a class="fs-5 mx-3 p-1 text-white anchor-style link-underline link-underline-opacity-0" href="https://drive.google.com/file/d/18BpUNf1cnuuS7oi5koRQ1rYTvYQbW2Dx/view?usp=sharing" target="_blank">Resume</a>
                 </div>
             </div>
         </div>
@@ -66,16 +66,16 @@
             <p class="banner-para-style">I am an enthusiast regarding frontend developement. I love solving problems in C++. Have been exploring Python currently.</p>
             <!-- social link  -->
             <div>
-                <a href="https://github.com/anupamahalder">Github</a>
-                <a href="https://www.linkedin.com/in/anupama-halder7/">LinkedIn</a>
-                <a href="https://leetcode.com/u/anupamahalder7/">Leetcode</a>
+                <a href="https://github.com/anupamahalder"><img src="/images/github_logo.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/anupama-halder7/"><img src="/images/linkedin_logo.png" alt=""></a>
+                <a href="https://leetcode.com/u/anupamahalder7/"><img src="/images/leetcode_logo.png" alt=""></a>
             </div>
         </div>
     </section>
 
     <!-- portfolio section  -->
     <section class="widthfull project-section-style py-5 px-3">
-        <h1 class="text-dark my-5 text-center">Portfolio</h1>
+        <h1 class="text-dark mb-5 text-center">Portfolio</h1>
         <!-- project 1  -->
         <div class="card card-container-style mb-3">
             <div class="row g-0">
@@ -86,8 +86,8 @@
               </div>
               <div class="col-12 col-lg-8 ">
                 <div class="p-3">
-                  <h1 class="card-title project-title">Nature Nurture</h1>
-                  <p class="card-text">This is a full stack project on nature-nurture garden for booking any garden services. Here user can confirm/cancel their booking.</p>
+                  <h2 class="card-title project-title">Nature Nurture</h2>
+                  <p class="card-text">This is a full stack project on nature-nurture garden for booking any garden services. Features of my web applications are below--</p>
                   <!-- features -->
                   <div class="py-3">
                     <p>1. Users can login/register in our site</p>
@@ -119,11 +119,11 @@
               </div>
               <div class="col-12 col-lg-8 ">
                 <div class="p-3">
-                  <h1 class="card-title project-title">Talent Canvas</h1>
+                  <h2 class="card-title project-title">Talent Canvas</h2>
                   <p class="card-text">This is a full stack project on job searching. Where features are--</p>
                   <!-- features -->
                   <div class="py-3">
-                    <p>1. Users can hashtag#apply for jobs just by putting a resume link after login to the website.</p>
+                    <p>1. Users can apply for jobs just by putting a resume link after login to the website.</p>
                     <p>2. Users can also post their own jobs.</p>
                     <p>3. users can sort the jobs based on filters like job category or job posting dates.</p>
                     <p>4. Users can see how many people have hashtag#applied to one job.</p>
@@ -145,34 +145,42 @@
     </section>
 
     <!-- about section  -->
-    <section class="about-section-style bg-dark py-5">
-        <h1 class="text-center fw-bold heading-style py-4 text-white">About Me</h1>
-        <div class="container-fluid text-white">
+    <section class="about-section-style py-5">
+        <h1 class="text-center fw-bold py-4 heading-style">About Me</h1>
+        <div class="container-fluid">
             <div class="container">
                 <div class="row">
                     <div class="my-4 col-12 col-md-6">
-                        <h3 class="">Skills</h3>
+                        <h3 class="project-title">Skills: </h3>
                         <h5>Web Development:</h5>
                         <div class="mb-5">
-                            <button class="skill-btn-style">Node</button>
-                            <button class="skill-btn-style">HTML</button>
-                            <button class="skill-btn-style">CSS</button>
-                            <button class="skill-btn-style">MongoDB</button>
-                            <button class="skill-btn-style">React</button>
-                            <button class="skill-btn-style">JavaScript</button>
-                            <button class="skill-btn-style">HTML</button>
+                            <button class="skill-btn-style m-2">Node</button>
+                            <button class="skill-btn-style m-2">HTML</button>
+                            <button class="skill-btn-style m-2">CSS</button>
+                            <button class="skill-btn-style m-2">MongoDB</button>
+                            <button class="skill-btn-style m-2">React</button>
+                            <button class="skill-btn-style m-2">JavaScript</button>
+                            <button class="skill-btn-style m-2">HTML</button>
                         </div>
-                        <h3>Programming Language:</h3>
+                        <h5 class="">Programming Language:</h5>
+                        <div class="mb-5">
+                            <button class="skill-btn-style m-2">C/C++</button>
+                            <button class="skill-btn-style m-2">JavaScript</button>
+                            <button class="skill-btn-style m-2">Python</button>
+                        </div>
+                        <h5 class="">Tools and Platforms:</h5>
                         <div>
-                            <button class="skill-btn-style">C/C++</button>
-                            <button class="skill-btn-style">JavaScript</button>
-                            <button class="skill-btn-style">Python</button>
+                            <button class="skill-btn-style m-2">Git + Github</button>
+                            <button class="skill-btn-style m-2">Firebase</button>
+                            <button class="skill-btn-style m-2">MySQL</button>
                         </div>
                     </div>
                     <div class="my-4 col-12 col-md-6 mb-3">
-                        <h3>Education:</h3>
-                        <p>MCA, Jadavpur University, India</p>
-                        <p>BSC (Computer Science), Vivekanda College, India</p>
+                        <h3 class="project-title">Education:</h3>
+                        <h5 class="mt-3">MCA (2022 - 2024):</h5>
+                        <p>Jadavpur University, India</p>
+                        <h5 class="mt-5">BSC (2019- 2022): </h5>
+                        <p>Computer Science Honours, Vivekanda College, India</p>
                     </div>
                 </div>
             </div>
@@ -208,9 +216,9 @@
             <p>Copyright &copy; 2024 | Anupama Halder</p>
         <p>-- Connect Me Social Sites --</p>
         <!-- social links  -->
-        <a href="https://github.com/anupamahalder">Github</a>
-        <a href="https://www.linkedin.com/in/anupama-halder7/">LinkedIn</a>
-        <a href="https://leetcode.com/u/anupamahalder7/">Leetcode</a>
+        <a href="https://github.com/anupamahalder"><img src="/images/github_logo.png" alt=""></a>
+        <a href="https://www.linkedin.com/in/anupama-halder7/"><img src="/images/linkedin_logo.png" alt=""></a>
+        <a href="https://leetcode.com/u/anupamahalder7/"><img src="/images/leetcode_logo.png" alt=""></a>
         </div>
     </footer>
     <!-- adding bootstrap js cdn  -->
