Added about us section

--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
             <p class="banner-para-style">I am an enthusiast regarding frontend developement. I love solving problems in C++. Have been exploring Python currently.</p>
             <!-- social link  -->
             <div>
-                <a href="https://github.com/anupamahalder"><img src="/images/github_logo.png" alt=""></a>
-                <a href="https://www.linkedin.com/in/anupama-halder7/"><img src="/images/linkedin_logo.png" alt=""></a>
-                <a href="https://leetcode.com/u/anupamahalder7/"><img src="/images/leetcode_logo.png" alt=""></a>
+                <a href="https://github.com/anupamahalder"><img class="logo-style me-3" src="/images/github_logo.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/anupama-halder7/"><img class="logo-style me-3" src="/images/linkedin_logo.png" alt=""></a>
+                <a href="https://leetcode.com/u/anupamahalder7/"><img class="logo-style" src="/images/leetcode_logo.png" alt=""></a>
             </div>
         </div>
     </section>
 
     <!-- portfolio section  -->
     <section class="widthfull project-section-style py-5 px-3">
-        <h1 class="text-dark mb-5 text-center">Portfolio</h1>
+        <h1 class="text-dark mb-5 text-center heading-style fw-bold">Portfolio</h1>
         <!-- project 1  -->
         <div class="card card-container-style mb-3">
             <div class="row g-0">
@@ -146,7 +146,7 @@
 
     <!-- about section  -->
     <section class="about-section-style py-5">
-        <h1 class="text-center fw-bold py-4 heading-style">About Me</h1>
+        <h1 class="text-center fw-bold pb-md-4 heading-style">About Me</h1>
         <div class="container-fluid">
             <div class="container">
                 <div class="row">
@@ -188,7 +188,7 @@
     </section>
     <!-- contact details section  -->
     <section class="my-5">
-        <h1 class="text-center fw-bold heading-style py-4">Connect With Me</h1>
+        <h1 class="text-center fw-bold heading-style pb-md-4">Connect With Me</h1>
         <form action="" class="py-4 form-style">
             <div>
             <div class="mb-3 d-md-flex align-items-center justify-content-center">
@@ -214,11 +214,11 @@
     <footer class="bg-dark">
         <div class="footer-content-style">
             <p>Copyright &copy; 2024 | Anupama Halder</p>
-        <p>-- Connect Me Social Sites --</p>
+        <p>-- Connect Me On Social Sites --</p>
         <!-- social links  -->
-        <a href="https://github.com/anupamahalder"><img src="/images/github_logo.png" alt=""></a>
-        <a href="https://www.linkedin.com/in/anupama-halder7/"><img src="/images/linkedin_logo.png" alt=""></a>
-        <a href="https://leetcode.com/u/anupamahalder7/"><img src="/images/leetcode_logo.png" alt=""></a>
+        <a href="https://github.com/anupamahalder"><img class="logo-style" src="/images/github_logo.png" alt=""></a>
+        <a href="https://www.linkedin.com/in/anupama-halder7/"><img class="logo-style" src="/images/linkedin_logo.png" alt=""></a>
+        <a href="https://leetcode.com/u/anupamahalder7/"><img class="logo-style" src="/images/leetcode_logo.png" alt=""></a>
         </div>
     </footer>
     <!-- adding bootstrap js cdn  -->
